# wyrd

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  MIGRATION-0.2.md  README.md  prek.toml
.github/workflows/: ci.yml  codspeed.yml  devana-hunt.lock.yml  devana-hunt.md  devana-work-queue.lock.yml  devana-work-queue.md  publish.yml
.orchid/spec-research/001-v030-ergonomic-recipes/: 01-intake.md  02-research-questions.md  03-current-state.md  04-design-decisions.md  05-implementation-shape.md  06-shape-review.md  07-make-specs-handoff.md  research.toml
crates/wyrd-bevy/: Cargo.toml  README.md
crates/wyrd-bevy/benches/: host_tick.rs
crates/wyrd-bevy/examples/: and_door.rs
crates/wyrd-bevy/src/: lib.rs
crates/wyrd-core/: Cargo.toml  README.md
crates/wyrd-core/src/: error.rs  ids.rs  kind.rs  lib.rs  ports.rs  signal.rs
crates/wyrd-for-games/: Cargo.toml  README.md
crates/wyrd-for-games-bevy/: Cargo.toml  README.md
crates/wyrd-for-games-bevy/benches/: host_tick.rs
crates/wyrd-for-games-bevy/examples/: and_door.rs
crates/wyrd-for-games-bevy/src/: lib.rs
crates/wyrd-for-games/benches/: bind.rs  common.rs  runtime_foundation.rs  settle_catalog.rs  settle_chain.rs  settle_iso.rs  settle_stateful.rs
crates/wyrd-for-games/src/: lib.rs
crates/wyrd-for-games/src/authoring/: builder.rs  composer.rs  error.rs  macros.rs  mod.rs  pattern.rs  serde_json_codec.rs  serde_ron.rs  validate.rs  weave.rs
crates/wyrd-for-games/src/examples/: mod.rs
crates/wyrd-for-games/src/examples/tier_a/: a01_hello_invert.rs  a02_two_plate_and.rs  a03_bind_sample_loom.rs  a04_host_tick_once.rs  a05_invalid_map_validation.rs  mod.rs
crates/wyrd-for-games/src/examples/tier_b/: b01_monostable_pattern.rs  b02_two_plate_door.rs  b03_flag_toggle.rs  b04_counter_threshold.rs  b05_delayed_pulse.rs  mod.rs
crates/wyrd-for-games/src/examples/tier_c/: c01_multi_switch_latch.rs  c02_timed_hold.rs  c03_press_n_then_window.rs  c04_button_cooldown.rs  c05_axis_digital.rs  c06_map_remap.rs  c07_digitize_steps.rs  c08_on_start_once.rs  c09_emit_once.rs  c10_or_any_of_keys.rs  c11_typed_composer.rs  mod.rs
crates/wyrd-for-games/src/examples/tier_d/: d01_shrine_chamber.rs  d02_checkpoints_and_presets.rs  mod.rs
crates/wyrd-for-games/src/foundation/: ids.rs  kind.rs  mod.rs  ports.rs  signal.rs
crates/wyrd-for-games/src/runtime_impl/: bind.rs  error.rs  handles.rs  host.rs  kind_tag.rs  loom.rs  mod.rs  outbox.rs  recipe.rs  runtime_state.rs  scenario.rs
crates/wyrd-for-games/src/runtime_impl/cookbook/: helpers.rs  mod.rs  tier_a.rs  tier_b.rs  tier_c.rs  tier_d.rs
crates/wyrd-for-games/tests/: catalog_change.rs  catalog_clamp.rs  catalog_digitize.rs  catalog_falling.rs  catalog_random.rs  catalog_select.rs  catalog_sqrt.rs  catalog_threshold.rs  catalog_xor.rs  codec_errors.rs  compare_calc_rising.rs  composer.rs  cookbook_topology.rs  counter_flag_emit.rs  coverage_authoring.rs  coverage_loom.rs  coverage_runtime.rs  delay_capacity.rs  delay_ring.rs  emit_cap.rs  emit_enable.rs  hello_and_door.rs  host_unit.rs  loom_full_arms.rs  package_api.rs  patterns_cookbook.rs  recipe.rs  runtime_handle_ownership.rs  runtime_state.rs  scenario.rs  schema.rs  scripted_host_door.rs  timer_modes.rs  tutorial_ladder.rs  validate_edges.rs  weave_macro.rs  weave_macro_ui.rs  zero_alloc_loom.rs
crates/wyrd-for-games/tests/common/: mod.rs
crates/wyrd-for-games/tests/ui/: pattern_duplicate_binding.rs  pattern_duplicate_binding.stderr  pattern_invalid_endpoint.rs  pattern_invalid_endpoint.stderr  pattern_unknown_binding.rs  pattern_unknown_binding.stderr  weave_duplicate_binding.rs  weave_invalid_endpoint.rs  weave_invalid_endpoint.stderr  weave_unknown_binding.rs  weave_unknown_binding.stderr
crates/wyrd-graph/: Cargo.toml  README.md
crates/wyrd-graph/src/: builder.rs  error.rs  lib.rs  macros.rs  pattern.rs  serde_json_codec.rs  serde_ron.rs  validate.rs  weave.rs
crates/wyrd-graph/tests/: validate_edges.rs  weave_macro.rs
crates/wyrd-graph/tests/ui/: weave_duplicate_binding.rs  weave_duplicate_binding.stderr  weave_invalid_endpoint.rs  weave_invalid_endpoint.stderr  weave_unknown_binding.rs
crates/wyrd-runtime/: Cargo.toml  README.md
crates/wyrd-runtime/benches/: bind.rs  common.rs  settle.rs  settle_catalog.rs  settle_chain.rs  settle_iso.rs  settle_stateful.rs
crates/wyrd-runtime/src/: bind.rs  error.rs  handles.rs  host.rs  kind_tag.rs  lib.rs  loom.rs  outbox.rs
crates/wyrd-runtime/src/cookbook/: helpers.rs  mod.rs  tier_a.rs  tier_b.rs  tier_c.rs  tier_d.rs
crates/wyrd-runtime/tests/: catalog_change.rs  catalog_clamp.rs  catalog_digitize.rs  catalog_falling.rs  catalog_random.rs  catalog_select.rs  catalog_sqrt.rs  catalog_threshold.rs  catalog_xor.rs  compare_calc_rising.rs  counter_flag_emit.rs  delay_capacity.rs  delay_ring.rs  emit_cap.rs  emit_enable.rs  hello_and_door.rs  host_unit.rs  loom_full_arms.rs  patterns_cookbook.rs  runtime_handle_ownership.rs  scripted_host_door.rs  timer_modes.rs  tutorial_ladder.rs  zero_alloc_loom.rs
docs/: README.md  ROADMAP.md  perf.md
docs/api-preview/: README.md
docs/concepts/: performance-model.md  vision-and-scope.md
docs/examples/: README.md
docs/perf/: 2026-07-13-runtime-and-embedded-performance-audit.md
docs/research/: ideation-doctest-gbg-curriculum.md
integrations/wyrd-moirai/: Cargo.toml
integrations/wyrd-moirai/src/: lib.rs
scripts/: check-coverage-source-lines.sh  coverage-gaps.md  coverage.sh  dual-check.sh
specs/001-v030-ergonomic-recipes/: design.md  requirements.md  spec.toml
specs/001-v030-ergonomic-recipes/tasks/: T001.md  T002.md  T003.md  T004.md  T005.md  T006.md  T007.md  T008.md
workflows/: devana-hunt.md  devana-work-queue.md
