[workspace]
resolver = "2"
members = [
    "crates/wyrd-for-games",
    "crates/wyrd-for-games-bevy",
]
default-members = [
    "crates/wyrd-for-games",
    "crates/wyrd-for-games-bevy",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
repository = "https://github.com/bnomei/wyrd"
rust-version = "1.75"

[workspace.dependencies]
wyrd-for-games = { path = "crates/wyrd-for-games", version = "0.2.0", default-features = false }
no-std-compat = { version = "0.4", default-features = false }
libm = { version = "0.2.16", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
ron = { version = "0.12", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }

[profile.release]
lto = true
codegen-units = 1
