[package]
name = "wyrd-bevy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Thin Bevy adapter for Wyrd Weaves (sample → loom → apply)"
readme = "README.md"

[features]
default = ["bevy_log"]
bevy_log = ["bevy/bevy_log"]

[dependencies]
# Match engine-neutral hosts: pin Bevy, no default renderer stack.
bevy = { version = "0.18", default-features = false }
wyrd-core = { workspace = true, default-features = false, features = ["std", "signal-f32"] }
wyrd-graph = { workspace = true, default-features = false, features = ["std", "signal-f32"] }
wyrd-runtime = { workspace = true, default-features = false, features = ["std", "signal-f32"] }

[[example]]
name = "and_door"
path = "examples/and_door.rs"
