[package]
name = "wyrd-bevy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Thin Bevy adapter for Wyrd Weaves (sample → loom → apply). signal-f32 only."
readme = "README.md"
autobenches = false

[features]
default = []
# Enable for loom error logs via bevy::log
bevy_log = ["bevy/bevy_log"]

[dependencies]
# Match engine-neutral hosts: pin Bevy, no default renderer stack.
bevy = { version = "0.19", default-features = false }
# Bevy path is float-native — dual-check i32 on core/runtime CI, not here.
wyrd-core = { workspace = true, default-features = false, features = ["std", "signal-f32"] }
wyrd-graph = { workspace = true, default-features = false, features = ["std", "signal-f32"] }
wyrd-runtime = { workspace = true, default-features = false, features = ["std", "signal-f32"] }

[dev-dependencies]
# Drop-in Divan compatibility layer that lets CodSpeed instrument this suite.
divan = { version = "4.7.0", package = "codspeed-divan-compat" }

[[example]]
name = "and_door"
path = "examples/and_door.rs"

[[bench]]
name = "host_tick"
path = "benches/host_tick.rs"
harness = false
