[package]
name = "wyrd-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types for Wyrd: Signal, ids, ports, KnotKind"
readme = "README.md"

[features]
default = ["std", "signal-f32"]
std = ["no-std-compat/std"]
# Exactly one signal path should be enabled for a given build.
signal-f32 = []
signal-i32 = []
alloc = ["no-std-compat/alloc"]
serde = ["dep:serde"]

[dependencies]
no-std-compat = { workspace = true, features = ["alloc"] }
serde = { workspace = true, optional = true }

[dev-dependencies]
