[package]
name = "wyrd-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Wyrd loom: bind, settle, outbox"
readme = "README.md"
# Only explicit [[bench]] targets; shared helpers in benches/common.rs.
autobenches = false

[features]
default = ["std", "signal-f32"]
std = ["no-std-compat/std", "wyrd-core/std", "wyrd-graph/std"]
signal-f32 = ["wyrd-core/signal-f32", "wyrd-graph/signal-f32"]
signal-i32 = ["wyrd-core/signal-i32", "wyrd-graph/signal-i32"]
alloc = ["no-std-compat/alloc", "wyrd-core/alloc", "wyrd-graph/alloc"]

[dependencies]
wyrd-core = { workspace = true, default-features = false }
wyrd-graph = { workspace = true, default-features = false }
no-std-compat = { workspace = true, features = ["alloc"] }

[dev-dependencies]
divan = "0.1"

# Split bench binaries so the suite can grow without one mega-file.
# Shared builders: benches/common.rs (#[path] include per binary).
[[bench]]
name = "settle_chain"
path = "benches/settle_chain.rs"
harness = false

[[bench]]
name = "settle_catalog"
path = "benches/settle_catalog.rs"
harness = false

[[bench]]
name = "settle_stateful"
path = "benches/settle_stateful.rs"
harness = false

[[bench]]
name = "bind"
path = "benches/bind.rs"
harness = false

[[bench]]
name = "settle_iso"
path = "benches/settle_iso.rs"
harness = false
